<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.atosworldline.jsf2</groupId>
    <artifactId>awlcontact</artifactId>
    <packaging>war</packaging>
    <version>0.0.1-SNAPSHOT</version>
    <name>A custom project developed with jsf2</name>

    <properties>
    	<javaee-web-api.version>6.0</javaee-web-api.version>
    	<javax.servlet-api.version>3.0.1</javax.servlet-api.version>
		<mojarra-api.version>2.2.11</mojarra-api.version>
		<mojarra-impl.version>2.2.11</mojarra-impl.version>
		<myfaces.version>2.2.8</myfaces.version>
		<jstl.version>1.2</jstl.version>
		<primefaces.version>5.2</primefaces.version>
		<primefaces.allthemes.version>1.0.10</primefaces.allthemes.version>
		<richfaces.version>4.5.8.Final</richfaces.version>
		<bootsfaces.version>0.6.6</bootsfaces.version>
		<weld-servlet.version>2.2.14.Final</weld-servlet.version>
		<shiro-web.version>1.2.4</shiro-web.version>
		<shiro-faces.version>2.0-SNAPSHOT</shiro-faces.version>
		<validation-api.version>1.1.0.Final</validation-api.version>
		<hibernate-validator.version>5.1.3.Final</hibernate-validator.version>
		<hibernate-entitymanager.version>4.3.10.Final</hibernate-entitymanager.version>
		<hibernate-jpa-2.0-api.version>1.0.1.Final</hibernate-jpa-2.0-api.version>
		<hsqldb.version>2.3.2</hsqldb.version>
		<jetty.version>9.3.0.M2</jetty.version>
		<jandex.version>1.2.2.Final</jandex.version>
		<commons-logging.version>1.2</commons-logging.version>
	</properties>



	<profiles>
		<profile>
			<id>myfaces</id>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>org.apache.myfaces.core</groupId>
					<artifactId>myfaces-api</artifactId>
					<version>${myfaces.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>org.apache.myfaces.core</groupId>
					<artifactId>myfaces-impl</artifactId>
					<version>${myfaces.version}</version>
					<scope>compile</scope>
				</dependency>
			</dependencies>
			<properties>
				<override-web-xml>src/main/jetty/override-myfaces-web.xml</override-web-xml>
			</properties>
		</profile>
		<profile>
			<id>mojarra</id>
			<activation>
				<activeByDefault>false</activeByDefault>
			</activation>
			<dependencies>
				<dependency>
					<groupId>com.sun.faces</groupId>
					<artifactId>jsf-api</artifactId>
					<version>${mojarra-api.version}</version>
					<scope>compile</scope>
				</dependency>
				<dependency>
					<groupId>com.sun.faces</groupId>
					<artifactId>jsf-impl</artifactId>
					<version>${mojarra-impl.version}</version>
					<scope>compile</scope>
				</dependency>
			</dependencies>
			<properties>
				<override-web-xml>src/main/jetty/override-mojarra-web.xml</override-web-xml>
			</properties>
		</profile>
	</profiles>



	<dependencies>
		
		<!-- javaee6 -->
		<dependency>
			<groupId>javax</groupId>
			<artifactId>javaee-web-api</artifactId>
			<version>${javaee-web-api.version}</version>
			<scope>provided</scope>
		</dependency>
		  

		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>${javax.servlet-api.version}</version>
			<scope>runtime</scope>
		</dependency>
		
		<!-- JSF Dependencies -->
		
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>jstl</artifactId>
			<version>${jstl.version}</version>
			<type>jar</type>
			<scope>compile</scope>
		</dependency>
		
		<!-- Primefaces Dependencies -->
		<dependency>
			<groupId>org.primefaces</groupId>
			<artifactId>primefaces</artifactId>
			<version>${primefaces.version}</version>
		</dependency>
		<dependency>  
		    <groupId>org.primefaces.themes</groupId>  
		    <artifactId>all-themes</artifactId>  
		    <version>${primefaces.allthemes.version}</version>  
		</dependency> 
		
		<!-- Richfaces Dependencies -->
		<dependency>
		    <groupId>org.richfaces</groupId>
		    <artifactId>richfaces</artifactId>
		    <version>${richfaces.version}</version>
		</dependency>
		
		<!-- Bootsfaces Dependencies -->
		<dependency>
		    <groupId>net.bootsfaces</groupId>
		    <artifactId>bootsfaces</artifactId>
		    <version>${bootsfaces.version}</version>
		    <scope>compile</scope>
		</dependency>

		<!-- CDI Dependencies -->
		<dependency>
			<groupId>org.jboss.weld.servlet</groupId>
			<artifactId>weld-servlet</artifactId>
			<version>${weld-servlet.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
		    <groupId>org.jboss</groupId>
		    <artifactId>jandex</artifactId>
		    <version>${jandex.version}</version>
		</dependency>
		
		<!-- Bean Validation Dependencies -->
		<dependency>
			<groupId>javax.validation</groupId>
			<artifactId>validation-api</artifactId>
			<version>${validation-api.version}</version>
			<scope>compile</scope>
		</dependency>
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-validator</artifactId>
			<version>${hibernate-validator.version}</version>
			<scope>compile</scope>
		</dependency>
		
		<!-- JPA Persistence Dependencies -->
		<dependency>
			<groupId>org.hibernate</groupId>
			<artifactId>hibernate-entitymanager</artifactId>
			<version>${hibernate-entitymanager.version}</version>
			<scope>compile</scope>
			<exclusions>
				<exclusion>
					<artifactId>hsqldb</artifactId>
					<groupId>hsqldb</groupId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.hibernate.javax.persistence</groupId>
			<artifactId>hibernate-jpa-2.0-api</artifactId>
			<version>${hibernate-jpa-2.0-api.version}</version>
			<scope>compile</scope>
		</dependency>
		
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>${hsqldb.version}</version>
		</dependency>
		
		<!--  shiro dependencies -->
		
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-web</artifactId>
			<version>${shiro-web.version}</version>
		</dependency>
		
		<!-- use shiro-faces meanwhile shiro 1.3 release 
		remove it when shiro-1.3 will be released-->
		<dependency>
			<groupId>org.apache.shiro</groupId>
			<artifactId>shiro-faces</artifactId>
			<version>${shiro-faces.version}</version>
		</dependency>
		
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>${commons-logging.version}</version>
		</dependency>
		
	</dependencies>



	<repositories>
		<!-- Used for some Java EE 6 pieces -->
		<repository>
			<id>maven2-repository.dev.java.net</id>
			<name>Java.net Repository for Maven</name>
			<url>http://download.java.net/maven/2/</url>
			<layout>default</layout>
		</repository>

		<!-- JBoss Repository used for hibernate-validator 4.0.0.GA -->
		<repository>
			<id>repository.jboss.org</id>
			<name>JBoss Repository</name>
			<url>http://repository.jboss.org/maven2/</url>
		</repository>
 		
 		 <repository>
		  <id>JBoss repository</id>
		  <url>https://repository.jboss.org/nexus/content/groups/public-jboss/</url>
	   	</repository>
		 
		 <repository>
			<id>prime-repo</id>
			<name>PrimeFaces Maven Repository</name>
			<url>http://repository.primefaces.org</url>
			<layout>default</layout>
		</repository>

		<repository>
			<id>thirdparty-releases</id>
			<name>JBoss Thirdparty Releases</name>
			<url>https://repository.jboss.org/nexus/content/repositories/thirdparty-releases</url>
		</repository>
		
		<!-- for shiro-faces meanwhile shiro 1.3 release 
		remove it when shiro-1.3 will be released -->
		<repository>
			<id>deluan.repo</id>
			<name>Deluan's Public Repository</name>
			<url>http://deluan.googlecode.com/svn/releases</url>
		</repository>
		<repository>
			<id>deluan.snapshots</id>
			<name>Deluan's Public Snapshots Repository</name>
			<url>http://deluan.googlecode.com/svn/snapshots</url>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
	</repositories>

	<build>
		<finalName>awlcontact</finalName>
		<plugins>
			<!--  Facilitates downloading source and javadoc in Eclipse -->
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<version>${jetty.version}</version>
				<configuration>
					<wtpversion>2.0</wtpversion>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
				</configuration>
			</plugin>
			<!-- Plugin to run and test through maven -->
			<plugin>
				<groupId>org.eclipse.jetty</groupId>
				<artifactId>jetty-maven-plugin</artifactId>
				<configuration>
					<jvmArgs>-Xmx1024m -Xms512m -XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError</jvmArgs>
                    <webApp>
			            <contextPath>/${project.build.finalName}</contextPath>
			            <overrideDescriptor >${override-web-xml}</overrideDescriptor >
			            <jettyEnvXml>src/main/webapp/WEB-INF/jetty-env.xml</jettyEnvXml>
			            <extraClasspath>target/classes;target/awlcontact</extraClasspath>
			        </webApp>
			        <scanIntervalSeconds>3</scanIntervalSeconds>
			        <reload>automatic</reload>
					<scanTargets>
						<scanTarget>target/classes</scanTarget>
						<scanTarget>target/awlcontact</scanTarget>
					</scanTargets>
			        <contextXml>src/main/webapp/WEB-INF/context.xml</contextXml>
			    </configuration>
			</plugin>
			<!--  Ensures we are compiling at 1.6 level -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
				</configuration>
			</plugin>
			<!--  Tomcat plugin for embedded tomcat  -->
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>tomcat-maven-plugin</artifactId>
				<configuration>
					<path>/${project.build.finalName}</path>
				</configuration>
			</plugin>

		</plugins>
	</build>
	
	
</project>